@@ -392,7 +392,7 @@ void FCEU_DrawNumberRow(uint8 *XBuf, int *nstatus, int cur)
 
 static int FixJoedChar(uint8 ch)
 {
-	int c = ch; c -= 32;
+	int c = ch - 32;
 	return (c < 0 || c > 98) ? 0 : c;
 }
 static int JoedCharWidth(uint8 ch)
@@ -400,92 +400,123 @@ static int JoedCharWidth(uint8 ch)
 	return Font6x7[FixJoedChar(ch)*8];
 }
 
+char target[64][256];
+
 void DrawTextTransWH(uint8 *dest, uint32 width, uint8 *textmsg, uint8 fgcolor, int max_w, int max_h, int border)
 {
-	unsigned beginx=2, x=beginx;
-	unsigned y=2;
+	unsigned int beginx=2, x=beginx;
+	unsigned int y=2;
 
-	char target[64][256] = {{0}};
+	memset(target, 0, 64 * 256);
 
 	assert(width==256);
 	if (max_w > 256) max_w = 256;
 	if (max_h >  64) max_h =  64;
 
+	int ch, wid, nx, ny, max_x = x, offs;
+	int pixel_color;
 	for(; *textmsg; ++textmsg)
 	{
-		int ch, wid;
-
-		if(*textmsg == '\n') { x=beginx; y+=8; continue; }
-		ch  = FixJoedChar(*textmsg);
-		wid = JoedCharWidth(*textmsg);
-
-		int newx = x+wid;
-		if(newx >= (int)width) { x=beginx; y+=8; }
-
-		for(int ny=0; ny<7; ++ny)
+		if(*textmsg == '\n')
 		{
-			uint8 d = Font6x7[ch*8 + 1+ny];
-			for(int nx=0; nx<wid; ++nx)
+			// new line
+			x = beginx;
+			y += 8;
+			continue;
+		}
+		ch  = FixJoedChar(*textmsg);
+		wid = Font6x7[ch * 8];
+
+		if ((x + wid) >= (int)width)
+		{
+			// wrap to new line
+			x = beginx;
+			y += 8;
+		}
+
+		for(ny = 0; ny < 7; ++ny)
+		{
+			uint8 d = Font6x7[ch * 8 + 1 + ny];
+			for(nx = 0; nx < wid; ++nx)
 			{
-				int c = (d >> (7-nx)) & 1;
-				if(c)
+				pixel_color = (d >> (7 - nx)) & 1;
+				if (pixel_color)
 				{
-					if(y+ny >= 62) goto textoverflow;
-					target[y+ny][x+nx] = 2;
+					if (y + ny >= 62)
+					{
+						// Max border is 2, so the max safe y is 62 (since 64 is the max for the target array
+						goto textoverflow;
+					}
+					target[y + ny][x + nx] = 2;
+				} else
+				{
+					target[y + ny][x + nx] = 1;
 				}
-				else
-					target[y+ny][x+nx] = 1;
 			}
 		}
-    x += wid;
+		// proceed to next char
+		x += wid;
+		if (max_x < x)
+			max_x = x;
 
 	}
 textoverflow:
-	for(y=0; y<62; ++y)			//Max border is 2, so the max safe y is 62 (since 64 is the max for the target array
-		for(x=0; x<width; ++x)
+
+	max_x += 2;
+	if (max_x > width)
+		max_x = width;
+	int max_y = y + ny + 2;
+	if (max_y > 62)
+		max_y = 62;
+
+	// draw target buffer to screen buffer
+	for (y = 0; y < max_y; ++y)
+	{
+		for (x = 0; x < max_x; ++x)
 		{
-			int offs = y*width+x;
-			int c = 0;
+			offs = y * width + x;
+			pixel_color = target[y][x] * 100;
 
-			c += target[y][x] * 100;
-
-			if(border>=1){
-				x>=(     1) && (c += target[y][x-1]);
-				x<(width-1) && (c += target[y][x+1]);
-				y>=(     1) && (c += target[y-1][x]);
-				y<(16   -1) && (c += target[y+1][x]);
+			if(border>=1)
+			{
+				x>=(     1) && (pixel_color += target[y][x-1]);
+				x<(width-1) && (pixel_color += target[y][x+1]);
+				y>=(     1) && (pixel_color += target[y-1][x]);
+				y<(16   -1) && (pixel_color += target[y+1][x]);
 			}
-			if(border>=2){
-				x>=(     1) && (c += target[y][x-1]*10);
-				x<(width-1) && (c += target[y][x+1]*10);
-				y>=(     1) && (c += target[y-1][x]*10);
-				y<(16   -1) && (c += target[y+1][x]*10);
+			if(border>=2)
+			{
+				x>=(     1) && (pixel_color += target[y][x-1]*10);
+				x<(width-1) && (pixel_color += target[y][x+1]*10);
+				y>=(     1) && (pixel_color += target[y-1][x]*10);
+				y<(16   -1) && (pixel_color += target[y+1][x]*10);
 
-				x>=(     1) && y>=(  1) && (c += target[y-1][x-1]);
-				x<(width-1) && y>=(  1) && (c += target[y-1][x+1]);
-				x>=(     1) && y<(16-1) && (c += target[y+1][x-1]);
-				x<(width-1) && y<(16-1) && (c += target[y+1][x+1]);
+				x>=(     1) && y>=(  1) && (pixel_color += target[y-1][x-1]);
+				x<(width-1) && y>=(  1) && (pixel_color += target[y-1][x+1]);
+				x>=(     1) && y<(16-1) && (pixel_color += target[y+1][x-1]);
+				x<(width-1) && y<(16-1) && (pixel_color += target[y+1][x+1]);
 
-				x>=(     2) && (c += target[y][x-2]);
-				x<(width-2) && (c += target[y][x+2]);
-				y>=(     2) && (c += target[y-2][x]);
-				y<(16   -2) && (c += target[y+2][x]);
+				x>=(     2) && (pixel_color += target[y][x-2]);
+				x<(width-2) && (pixel_color += target[y][x+2]);
+				y>=(     2) && (pixel_color += target[y-2][x]);
+				y<(16   -2) && (pixel_color += target[y+2][x]);
 			}
 
-			if(c >= 200)
+			if(pixel_color >= 200)
 				dest[offs] = fgcolor;
-			else if(c >= 10)
+			else if(pixel_color >= 10)
 			{
 				if(dest[offs] < 0xA0)
 					dest[offs] = 0xC1;
 				else
 					dest[offs] = 0xD1;
 			}
-			else if(c > 0)
+			else if(pixel_color > 0)
 			{
 				dest[offs] = 0xCF;
 			}
 		}
+	}
 }
 
 void DrawTextTrans(uint8 *dest, uint32 width, uint8 *textmsg, uint8 fgcolor)
